Création des packages controleur et modèle et de la classe Utilisateur

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:theme="@style/Theme.EnjoyYourMeal"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".controleur.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
