--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -14,6 +14,12 @@
         <activity
             android:name=".controleur.ProfilActivity"
             android:exported="false" />
+          <activity
+            android:name=".controleur.ConnexionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.InscriptionActivity"
+            android:exported="false" />
         <activity
             android:name=".controleur.MainActivity"
             android:exported="true">
