finalisation de afficher recette + début afficher liste de course

--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:theme="@style/Theme.EnjoyYourMeal"
         tools:targetApi="31">
         <activity
+            android:name=".ModifierListeDeCourse"
+            android:exported="false" />
+        <activity
+            android:name=".AfficherListeDeCourse"
+            android:exported="false" />
+        <activity
             android:name=".controleur.MainActivity"
             android:exported="true">
             <intent-filter>
