--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -11,19 +11,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EnjoyYourMeal"
         tools:targetApi="31" >
+
         <activity
 
-            android:name=".ModifierListeDeCourse"
+            android:name=".controleur.ModifierListeDeCourseActivity"
             android:exported="false" />
         <activity
-            android:name=".AfficherListeDeCourse"
+            android:name=".controleur.AfficherListeDeCourseActivity"
             android:exported="false" />
-        <activity
-            android:name=".controleur.MainActivity"
-            android:exported="true">
 
+        <activity
             android:name=".controleur.FrigoActivity"
             android:exported="false" />
+
+
         <activity
             android:name=".controleur.CreerRecetteActivity"
             android:exported="false" />
@@ -36,6 +37,13 @@
         <activity
             android:name=".controleur.InscriptionActivity"
             android:exported="false" />
+        <activity
+            android:name=".controleur.RecetteActivity"
+            android:exported="false"/>
+        <activity
+            android:name="com.example.enjoyyourmeal.controleur.EtapeRecetteActivity"
+            android:exported="false"/>
+
         <activity
             android:name=".controleur.MainActivity"
             android:exported="true" >
