--- a/code/app/src/main/AndroidManifest.xml
+++ b/code/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,10 +12,53 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.EnjoyYourMeal"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+
         <activity
-            android:name=".MainActivity"
-            android:exported="true">
+
+            android:name=".controleur.ModifierListeDeCourseActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.AfficherListeDeCourseActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".controleur.FrigoActivity"
+            android:exported="false" />
+
+
+        <activity
+            android:name=".controleur.EtapeFinaleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.EtapePrepaActivity"
+            android:exported="false" />
+          <activity
+            android:name=".controleur.MesRecetteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.CreerRecetteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.ProfilActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.ConnexionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.InscriptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".controleur.RecetteActivity"
+            android:exported="false"/>
+        <activity
+            android:name="com.example.enjoyyourmeal.controleur.EtapeRecetteActivity"
+            android:exported="false"/>
+
+        <activity
+            android:name=".controleur.MainActivity"
+            android:exported="true" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
